--- a/styles/lista-tareas.css
+++ b/styles/lista-tareas.css
@@ -1,4 +1,4 @@
-@import url('./common.css');
+@import url("./common.css");
 header {
   display: flex;
   background: linear-gradient(90deg, var(--primary), var(--secondary));
@@ -10,10 +10,10 @@ header {
 a {
   display: block;
   width: fit-content;
-  padding: .7em 1em;
-  border-bottom: .2em solid white;
+  padding: 0.7em 1em;
+  border-bottom: 0.2em solid white;
   text-decoration: none;
-  color: white
+  color: white;
 }
 
 .user-info {
@@ -28,18 +28,18 @@ a {
 }
 
 .user-info .user-image {
-  background-image: url('../assets/profile.png');
+  background-image: url("../assets/profile.png");
   height: 2em;
   width: 2em;
   border-radius: 50%;
   background-color: white;
   opacity: 1;
-  margin-left: .7em;
+  margin-left: 0.7em;
 }
 
-#closeApp{
+#closeApp {
   margin-left: 15px;
-  font-size: .7em;
+  font-size: 0.7em;
   background-color: rgb(218, 88, 88);
   color: white;
   border-radius: 50vh;
@@ -58,16 +58,16 @@ a {
   margin: 0 10%;
   padding: 1em;
   box-shadow: 2px 2px 10px lightgrey;
-  border-radius: .2em;
+  border-radius: 0.2em;
   z-index: 20;
 }
 
-.nueva-tarea input[type=text] {
+.nueva-tarea input[type="text"] {
   border: none;
   flex: 1;
   border-bottom: 1px solid lightgrey;
   border-radius: 0;
-  padding: .3em;
+  padding: 0.3em;
   font-size: 1.1em;
 }
 
@@ -78,7 +78,7 @@ a {
 
 .nueva-tarea input::placeholder {
   color: rgb(197, 197, 197);
-  text-indent: .2em;
+  text-indent: 0.2em;
 }
 
 .nueva-tarea button {
@@ -87,7 +87,7 @@ a {
   background-color: transparent;
   margin-left: 2em;
   margin-right: 1em;
-  opacity: .5;
+  opacity: 0.5;
   cursor: pointer;
 }
 
@@ -143,10 +143,10 @@ a {
 }
 
 .tarea:first-child .not-done::before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 100%;
-  left: calc(.75em - 1px);
+  left: calc(0.75em - 1px);
   display: block;
   height: 3em;
   width: 2px;
@@ -154,10 +154,10 @@ a {
 }
 
 .tarea:not(:last-child) .not-done::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 100%;
-  left: calc(.75em - 1px);
+  left: calc(0.75em - 1px);
   display: block;
   height: 4.5em;
   width: 2px;
@@ -179,7 +179,7 @@ a {
 }
 
 .tarea .timestamp {
-  font-size: .9em;
+  font-size: 0.9em;
   color: rgb(134, 134, 134);
 }
 
@@ -189,9 +189,9 @@ a {
   position: relative;
   width: 8em;
   text-align: center;
-  padding: .5em 1em;
+  padding: 0.5em 1em;
   background-color: white;
-  border-radius: .2em;
+  border-radius: 0.2em;
   box-shadow: 3px 3px 5px lightgrey;
   color: rgb(170, 170, 170);
   font-weight: 400;
@@ -208,12 +208,11 @@ a {
   margin: 2em 15%;
 }
 
-
-.tareas-terminadas i{
+.tareas-terminadas i {
   color: grey;
   background-color: rgb(228, 228, 228);
 }
-.tareas-terminadas button{
+.tareas-terminadas button {
   margin-left: 10px;
 }
 
@@ -226,21 +225,36 @@ a {
   text-decoration: line-through;
 }
 
-#skeleton .descripcion{
+#skeleton .descripcion {
   background-color: rgb(189, 189, 189);
 }
-#skeleton p{
+#skeleton p {
   background-color: rgb(214, 214, 214);
   color: rgb(214, 214, 214);
 }
-#skeleton .not-done{
+#skeleton .not-done {
   background-color: rgb(189, 189, 189);
 }
 
-#skeleton{
+#skeleton {
   animation: trasparencia 1s infinite;
 }
 @keyframes trasparencia {
-  0%{ opacity: 0.5;}
-  100%{ opacity: 0.8;}
+  0% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0.8;
+  }
+}
+
+/*
+  Estilos para agregar un efecto de hover sobre los botones en las tareas terminadas
+*/
+.boton-reabrir:hover {
+  color: #1565c0;
+}
+
+.boton-borrar:hover {
+  color: #c62828;
 }
